юнит тесты. findAll. update