@@ -1,102 +1,92 @@
 package pro.sky.telegrambotanimalshelter.service.implementation;
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import pro.sky.telegrambotanimalshelter.exceptions.CatNotFoundException;
 import pro.sky.telegrambotanimalshelter.models.Cat;
 import pro.sky.telegrambotanimalshelter.repository.CatRepository;
 
 import java.util.Collection;
-import java.util.List;
+import java.util.Collections;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class CatServiceImplTest {
-
-    private CatServiceImpl catService;
+class CatServiceImplTest {
 
     @Mock
     private CatRepository repository;
 
+    @InjectMocks
+    private CatServiceImpl catService;
+
     @BeforeEach
-    public void setUp() {
-        MockitoAnnotations.initMocks(this);
-        catService = new CatServiceImpl(repository);
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    public void testGetByIdCat_WithValidId_ReturnsCat() {
-        Cat cat = new Cat();
-        cat.setId(1L);
-        when(repository.findById(1L)).thenReturn(java.util.Optional.of(cat));
+    void testGetByIdCat() {
+        Long catId = 1L;
+        Cat testCat = new Cat();
+        testCat.setId(catId);
 
-        Cat result = catService.getByIdCat(1L);
+        when(repository.findById(catId)).thenReturn(Optional.of(testCat));
 
-        assertNotNull(result);
-        assertEquals(1L, result.getId());
+        Cat result = catService.getByIdCat(catId);
+
+        assertEquals(testCat, result);
     }
 
     @Test
-    public void testGetByIdCat_WithInvalidId_ThrowsException() {
-        when(repository.findById(1L)).thenReturn(java.util.Optional.empty());
+    void testAddCat() {
+        Cat testCat = new Cat();
 
-        assertThrows(CatNotFoundException.class, () -> catService.getByIdCat(1L));
+        when(repository.save(testCat)).thenReturn(testCat);
+
+        Cat result = catService.addCat(testCat);
+
+        assertEquals(testCat, result);
+
+        verify(repository, times(1)).save(testCat);
     }
 
     @Test
-    public void testAddCat_AddsCat() {
-        Cat cat = new Cat();
-        when(repository.save(any(Cat.class))).thenReturn(cat);
+    void testUpdateCat() {
+        Long catId = 1L;
+        Cat testCat = new Cat();
+        testCat.setId(catId);
 
-        Cat result = catService.addCat(cat);
+        when(repository.findById(catId)).thenReturn(Optional.of(testCat));
+        when(repository.save(testCat)).thenReturn(testCat);
 
-        assertNotNull(result);
-        assertEquals(cat, result);
+        Cat result = catService.updateCat(testCat);
+
+        assertEquals(testCat, result);
+
+        verify(repository, times(1)).save(testCat);
     }
 
     @Test
-    public void testUpdateCat_WithValidId_UpdatesCat() {
-        Cat cat = new Cat();
-        cat.setId(1L);
-        when(repository.findById(1L)).thenReturn(java.util.Optional.of(cat));
-        when(repository.save(any(Cat.class))).thenReturn(cat);
+    void testGetAllCat() {
+        Cat testCat = new Cat();
 
-        Cat result = catService.updateCat(cat);
-
-        assertNotNull(result);
-        assertEquals(1L, result.getId());
-    }
-
-    @Test
-    public void testUpdateCat_WithInvalidId_ThrowsException() {
-        Cat cat = new Cat();
-        cat.setId(1L);
-
-        when(repository.findById(1L)).thenReturn(java.util.Optional.empty());
-
-        assertThrows(CatNotFoundException.class, () -> catService.updateCat(cat));
-    }
-
-    @Test
-    public void testRemoveByIdCat_RemovesCat() {
-        catService.removeByIdCat(1L);
-
-        verify(repository, times(1)).deleteById(1L);
-    }
-
-    @Test
-    public void testGetAllCat_ReturnsListOfCats() {
-        Cat cat1 = new Cat();
-        Cat cat2 = new Cat();
-        when(repository.findAll()).thenReturn(List.of(cat1, cat2));
+        when(repository.findAll()).thenReturn(Collections.singletonList(testCat));
 
         Collection<Cat> result = catService.getAllCat();
 
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        assertTrue(result.contains(testCat));
     }
 
+    @Test
+    void testRemoveByIdCat() {
+        Long catId = 1L;
+
+        catService.removeByIdCat(catId);
+
+        verify(repository, times(1)).deleteById(catId);
+    }
 }
