@@ -1,135 +1,141 @@
 package pro.sky.telegrambotanimalshelter.service.implementation;
 
 
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-import pro.sky.telegrambotanimalshelter.exceptions.HumanDogNotFoundException;
 import pro.sky.telegrambotanimalshelter.models.HumanDog;
 import pro.sky.telegrambotanimalshelter.repository.HumanDogRepository;
 
+import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
-public class HumanDogServiceImplTest {
-
-    private HumanDogServiceImpl humanDogService;
+class HumanDogServiceImplTest {
 
     @Mock
     private HumanDogRepository repository;
 
+    @InjectMocks
+    private HumanDogServiceImpl humanDogService;
+
     @BeforeEach
-    public void setUp() {
-        MockitoAnnotations.initMocks(this);
-        humanDogService = new HumanDogServiceImpl(repository);
+    void setUp() {
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    public void testGetByIdHumanDog_WithValidId_ReturnsHumanDog() {
-        HumanDog humanDog = new HumanDog();
-        humanDog.setId(1L);
-        when(repository.findById(1L)).thenReturn(java.util.Optional.of(humanDog));
+    void testGetByIdHumanDog() {
+        Long humanDogId = 1L;
+        HumanDog testHumanDog = new HumanDog();
+        testHumanDog.setId(humanDogId);
 
-        HumanDog result = humanDogService.getByIdHumanDog(1L);
+        when(repository.findById(humanDogId)).thenReturn(Optional.of(testHumanDog));
 
-        assertNotNull(result);
-        assertEquals(1L, result.getId());
+        HumanDog result = humanDogService.getByIdHumanDog(humanDogId);
+
+        assertEquals(testHumanDog, result);
     }
 
     @Test
-    public void testGetByIdHumanDog_WithInvalidId_ThrowsException() {
-        when(repository.findById(1L)).thenReturn(java.util.Optional.empty());
+    void testAddHumanDog() {
+        HumanDog testHumanDog = new HumanDog();
 
-        assertThrows(HumanDogNotFoundException.class, () -> humanDogService.getByIdHumanDog(1L));
+        when(repository.save(testHumanDog)).thenReturn(testHumanDog);
+
+        HumanDog result = humanDogService.addHumanDog(testHumanDog);
+
+        assertEquals(testHumanDog, result);
+
+        verify(repository, times(1)).save(testHumanDog);
     }
 
     @Test
-    public void testAddHumanDog_AddsHumanDog() {
-        HumanDog humanDog = new HumanDog();
-        when(repository.save(any(HumanDog.class))).thenReturn(humanDog);
+    void testUpdateHumanDog() {
+        Long humanDogId = 1L;
+        HumanDog testHumanDog = new HumanDog();
+        testHumanDog.setId(humanDogId);
 
-        HumanDog result = humanDogService.addHumanDog(humanDog);
+        when(repository.findById(humanDogId)).thenReturn(Optional.of(testHumanDog));
+        when(repository.save(testHumanDog)).thenReturn(testHumanDog);
 
-        assertNotNull(result);
-        assertEquals(humanDog, result);
+        HumanDog result = humanDogService.updateHumanDog(testHumanDog);
+
+        assertEquals(testHumanDog, result);
+
+        verify(repository, times(1)).save(testHumanDog);
     }
 
     @Test
-    public void testUpdateHumanDog_WithValidId_UpdatesHumanDog() {
-        HumanDog humanDog = new HumanDog();
-        humanDog.setId(1L);
-        when(repository.findById(1L)).thenReturn(java.util.Optional.of(humanDog));
-        when(repository.save(any(HumanDog.class))).thenReturn(humanDog);
+    void testGetAllHumanDog() {
+        HumanDog testHumanDog = new HumanDog();
 
-        HumanDog result = humanDogService.updateHumanDog(humanDog);
+        when(repository.findAll()).thenReturn(Collections.singletonList(testHumanDog));
 
-        assertNotNull(result);
-        assertEquals(1L, result.getId());
+        Collection<HumanDog> result = humanDogService.getAllHumanDog();
+
+        assertTrue(result.contains(testHumanDog));
     }
 
     @Test
-    public void testUpdateHumanDog_WithInvalidId_ThrowsException() {
-        HumanDog humanDog = new HumanDog();
-        humanDog.setId(1L);
+    void testRemoveByIdHumanDog() {
+        Long humanDogId = 1L;
 
-        when(repository.findById(1L)).thenReturn(java.util.Optional.empty());
+        humanDogService.removeByIdHumanDog(humanDogId);
 
-        assertThrows(HumanDogNotFoundException.class, () -> humanDogService.updateHumanDog(humanDog));
+        verify(repository, times(1)).deleteById(humanDogId);
     }
 
     @Test
-    public void testRemoveByIdHumanDog_RemovesHumanDog() {
-        humanDogService.removeByIdHumanDog(1L);
+    void testFindByChatId() {
+        long chatId = 123456789L;
+        HumanDog testHumanDog = new HumanDog();
 
-        verify(repository, times(1)).deleteById(1L);
-    }
-
-    @Test
-    public void testFindByChatId_WithExistingChatId_ReturnsHumanDog() {
-        HumanDog humanDog = new HumanDog();
-        long chatId = 123L;
-        when(repository.findByChatId(chatId)).thenReturn(humanDog);
+        when(repository.findByChatId(chatId)).thenReturn(testHumanDog);
 
         HumanDog result = humanDogService.findByChatId(chatId);
 
-        assertNotNull(result);
-        assertEquals(humanDog, result);
+        assertEquals(testHumanDog, result);
     }
 
     @Test
-    public void testFindByChatId_WithNonExistingChatId_ReturnsNull() {
-        long chatId = 123L;
-        when(repository.findByChatId(chatId)).thenReturn(null);
+    void testSaveDog() {
+        HumanDog testHumanDog = new HumanDog();
 
-        HumanDog result = humanDogService.findByChatId(chatId);
+        when(repository.save(testHumanDog)).thenReturn(testHumanDog);
 
-        assertNull(result);
+        HumanDog result = humanDogService.saveDog(testHumanDog);
+
+        assertEquals(testHumanDog, result);
+
+        verify(repository, times(1)).save(testHumanDog);
     }
 
     @Test
-    public void testSaveDog_SavesHumanDog() {
-        HumanDog humanDog = new HumanDog();
-        when(repository.save(any(HumanDog.class))).thenReturn(humanDog);
+    void testExistsByChatId() {
+        Long chatId = 123456789L;
 
-        HumanDog result = humanDogService.saveDog(humanDog);
+        when(repository.existsByChatId(chatId)).thenReturn(true);
 
-        assertNotNull(result);
-        assertEquals(humanDog, result);
+        boolean result = humanDogService.existsByChatId(chatId);
+
+        assertTrue(result);
     }
 
     @Test
-    public void testFindAll_ReturnsListOfHumanDogs() {
-        HumanDog humanDog1 = new HumanDog();
-        HumanDog humanDog2 = new HumanDog();
-        when(repository.findAll()).thenReturn(List.of(humanDog1, humanDog2));
+    void testFindAll() {
+        HumanDog testHumanDog = new HumanDog();
+
+        when(repository.findAll()).thenReturn(Collections.singletonList(testHumanDog));
 
         List<HumanDog> result = humanDogService.findAll();
 
-        assertNotNull(result);
-        assertEquals(2, result.size());
+        assertTrue(result.contains(testHumanDog));
     }
-
 }
